CONFDEV-21720 In jira issue lozenge the type icon is not vertically centered. - Fix on Mobile and Email notification.

--- a/confluence-jira-plugin/src/main/resources/templates/mobile/extra/jira/mobile-macro.css
+++ b/confluence-jira-plugin/src/main/resources/templates/mobile/extra/jira/mobile-macro.css
@@ -4,7 +4,7 @@
     padding: 0 0 0 2px;
     border-radius: 3px;
     display: inline-block;
-    line-height: 14px;
+    line-height: 18px;
 }
 
 .jira-issue .icon {
@@ -15,6 +15,10 @@
     background-position: left center;
     font-size: 0;
     padding-right: 2px;
+}
+
+.jira-issue .aui-lozenge {
+
 }
 
 .jira-issue .issue-link {
